--- a/index.html
+++ b/index.html
@@ -12,5 +12,16 @@
     />
     <link rel="stylesheet" href="/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <div class="logo">Header Logo</div>
+        <div class="nav-links">
+          <a href="#">header link one</a>
+          <a href="#">header link two</a>
+          <a href="#">header link three</a>
+        </div>
+      </nav>
+    </header>
+  </body>
 </html>
