--- a/index.html
+++ b/index.html
@@ -23,5 +23,19 @@
         </div>
       </nav>
     </header>
+
+    <section class="hero">
+      <div class="hero-content">
+        <h1>This website is awesome</h1>
+        <p>
+          This website has some subtext that goes here under the main title.
+          It's a smaller font and the color is lower contrast
+        </p>
+        <button class="sign-up">Sign up</button>
+      </div>
+      <div class="hero-image">
+        <div class="placeholder">this is a placeholder for an image</div>
+      </div>
+    </section>
   </body>
 </html>
