--- a/index.html
+++ b/index.html
@@ -37,5 +37,27 @@
         <div class="placeholder">this is a placeholder for an image</div>
       </div>
     </section>
+
+    <section class="info">
+      <h2>Some random information.</h2>
+      <div class="info-cards">
+        <div class="card">
+          <div class="box"></div>
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="card">
+          <div class="box"></div>
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="card">
+          <div class="box"></div>
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="card">
+          <div class="box"></div>
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
