--- a/index.html
+++ b/index.html
@@ -70,5 +70,17 @@
         <p class="quote-author">-Thor, God of Thunder</p>
       </div>
     </section>
+
+    <section class="cta">
+      <div class="cta-content">
+        <div>
+          <h3>Call to action! It's time!</h3>
+          <p>
+            Sign up for our product by clicking that button right over there!
+          </p>
+        </div>
+        <button class="sign-up">Sign up</button>
+      </div>
+    </section>
   </body>
 </html>
