--- a/index.html
+++ b/index.html
@@ -82,5 +82,9 @@
         <button class="sign-up">Sign up</button>
       </div>
     </section>
+
+    <footer>
+      <p>Copyright © The Odin Project 2021</p>
+    </footer>
   </body>
 </html>
